se esta agregando mas contenido en la vista de ver-requerimientos v: 1.0

--- a/src/pages/ver-requerimientos/index.astro
+++ b/src/pages/ver-requerimientos/index.astro
@@ -140,15 +140,54 @@ import RequerimientosSidebar from '../../components/RequerimientosSidebar.astro'
 
                         <h3 class="text-xl font-semibold mb-3 text-blue-300">1.4 Responsables e involucrados</h3>
                         <div class="mb-6">
-                            <p class="mb-4">Equipo de desarrollo:</p>
-                            <ul class="list-disc pl-6 space-y-2">
-                                <li>Victor Manuel Ruiz Roque</li>
-                                <li>Brandon Alexander Gómez Calambaz</li>
-                                <li>Andres Felipe Triana Garces</li>
-                                <li>Jayi Danney Paladines Bolañoz</li>
-                                <li>Claudia Valentina Morales Omen</li>
-                            </ul>
-                            <p class="mt-4">Asesor: Diego Calderón Sirva</p>
+                            <p class="mb-4">En esta sección deben indicar el o los involucrados en el desarrollo del proyecto:</p>
+                            <div class="overflow-x-auto">
+                                <table class="min-w-full border-collapse">
+                                    <thead>
+                                        <tr class="bg-blue-900/30">
+                                            <th class="border border-blue-800 p-3 text-left">NOMBRE</th>
+                                            <th class="border border-blue-800 p-3 text-center">TIPO</th>
+                                            <th class="border border-blue-800 p-3 text-left">ROL</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr class="hover:bg-blue-900/10">
+                                            <td class="border border-blue-800 p-3">Victor Manuel Ruiz Roque</td>
+                                            <td class="border border-blue-800 p-3 text-center">Responsable</td>
+                                            <td class="border border-blue-800 p-3">Aprendiz</td>
+                                        </tr>
+                                        <tr class="hover:bg-blue-900/10">
+                                            <td class="border border-blue-800 p-3">Brandon Alexander Gómez Calambaz</td>
+                                            <td class="border border-blue-800 p-3 text-center">Responsable</td>
+                                            <td class="border border-blue-800 p-3">Aprendiz</td>
+                                        </tr>
+                                        <tr class="hover:bg-blue-900/10">
+                                            <td class="border border-blue-800 p-3">Andres Felipe Triana Garces</td>
+                                            <td class="border border-blue-800 p-3 text-center">Involucrado</td>
+                                            <td class="border border-blue-800 p-3">Aprendiz</td>
+                                        </tr>
+                                        <tr class="hover:bg-blue-900/10">
+                                            <td class="border border-blue-800 p-3">Jayi Danney Paladines Bolañoz</td>
+                                            <td class="border border-blue-800 p-3 text-center">Involucrado</td>
+                                            <td class="border border-blue-800 p-3">Aprendiz</td>
+                                        </tr>
+                                        <tr class="hover:bg-blue-900/10">
+                                            <td class="border border-blue-800 p-3">Claudia Valentina Morales Omen</td>
+                                            <td class="border border-blue-800 p-3 text-center">Involucrado</td>
+                                            <td class="border border-blue-800 p-3">Aprendiz</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+
+                        <h3 class="text-xl font-semibold mb-3 text-blue-300">1.5 Referencias (bibliografía o web grafía)</h3>
+                        <div class="mb-6">
+                            <p class="mb-4">
+                                En este apartado se debe mostrar las referencias bibliográficas o web grafía consultadas en 
+                                el proceso de análisis del sistema, adicionalmente si las referencias fueron obtenidas gracias 
+                                al proceso de levantamiento de información con el cliente, esto se debe mencionar previamente.
+                            </p>
                         </div>
                     </div>
                 </div>
