se acomodaron los diseño de las vista

--- a/src/pages/ver-requerimientos/areas/index.astro
+++ b/src/pages/ver-requerimientos/areas/index.astro
@@ -68,13 +68,22 @@ import Button from '../../../components/Button/Button.astro';
             </div>
 
             <!-- Sección de Diseño -->
+            
             <div class="p-6">
                 <h2 class="text-xl font-semibold text-white mb-6">Diseño de la Interfaz</h2>
                 <div class="bg-gray-900 p-6 rounded-lg">
                     <div class="rounded-lg overflow-hidden border border-gray-700">
-                        <div class="p-8 text-center text-gray-400">
-                            <p>Diseño de la interfaz de Áreas</p>
-                            <p class="text-sm mt-2">(La imagen del diseño se mostrará aquí)</p>
+                        <img 
+                            src="/image/areas/1.png" 
+                            alt="Diseño de la Interfaz de Áreas"
+                            class="w-full h-auto object-contain"
+                        />
+                        <div class="rounded-lg overflow-hidden border border-gray-700 mt-6">
+                            <img 
+                                src="/image/areas/2.png" 
+                                alt="Diseño alternativo de la Interfaz de Áreas"
+                                class="w-full h-auto object-contain"
+                            />
                         </div>
                     </div>
                 </div>
