--- a/src/pages/ver-requerimientos/roles/index.astro
+++ b/src/pages/ver-requerimientos/roles/index.astro
@@ -73,6 +73,13 @@ import Button from '../../../components/Button/Button.astro';
                             alt="Diseño de la Interfaz de Roles"
                             class="w-full h-auto object-contain"
                         />
+                        <div class="rounded-lg overflow-hidden border border-gray-700 mt-6">
+                            <img 
+                                src="/image/roles/2.png" 
+                                alt="Diseño alternativo de la Interfaz de Roles"
+                                class="w-full h-auto object-contain"
+                            />
+                        </div>
                     </div>
                 </div>
             </div>
