--- a/src/pages/ver-requerimientos/modulos/index.astro
+++ b/src/pages/ver-requerimientos/modulos/index.astro
@@ -73,6 +73,13 @@ import Button from '../../../components/Button/Button.astro';
                         />
 
                     </div>
+                    <div class="rounded-lg overflow-hidden border border-gray-700 mt-6">
+                        <img 
+                            src="/image/modulos/2.png" 
+                            alt="Diseño alternativo de la Interfaz de Módulos"
+                            class="w-full h-auto object-contain"
+                        />
+                    </div>
                 </div>
             </div>
         </div>
